force-app/main/default/objects/gmpkg__Hook_Config__mdt/gmpkg__Hook_Config__mdt.object-meta.xml
<CustomObject>
    <label>Hook Config</label>
    <pluralLabel>Hook Configs</pluralLabel>
</CustomObject>