force-app/main/default/objects/gmpkg__Hook_Config__mdt/fields/gmpkg__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>