force-app/main/default/objects/gmpkg__Hook_Config__mdt/fields/gmpkg__Context__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Context__c</fullName>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>beforeInsert</fullName>
                <default>true</default>
                <label>beforeInsert</label>
            </value>
            <value>
                <fullName>beforeUpdate</fullName>
            </value>
            <value>
                <fullName>afterInsert</fullName>
            </value>
            <value>
                <fullName>afterUpdate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>