force-app/main/default/objects/gmpkg__Hook_Config__mdt/fields/gmpkg__Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Execution_Order__c</fullName>
    <label>Execution Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>