force-app/main/default/objects/gmpkg__Hook_Config__mdt/fields/gmpkg__IsActive__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>