force-app/main/default/objects/gmpkg__Hook_Config__mdt/fields/gmpkg__Sobject__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Sobject__c</fullName>
    <label>Sobject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Hook_Configs</relationshipLabel>
    <relationshipName>Hook_Configs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>