force-app/main/default/objects/gmpkg__Hook_Config__mdt/listViews/gmpkg__All_Hooks.listView-meta.xml
<ListView>
    <fullName>gmpkg__All_Hooks</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>gmpkg__Sobject__c</columns>
    <columns>gmpkg__Apex_Class__c</columns>
    <columns>gmpkg__Context__c</columns>
    <columns>gmpkg__Execution_Order__c</columns>
    <columns>gmpkg__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Hooks</label>
    <language>en_US</language>
</ListView>